--- a/_themes/timeless/layout.html
+++ b/_themes/timeless/layout.html
@@ -65,7 +65,15 @@
     {%- endif -%}
     {%- endfor -%}
     <script type="text/javascript" src="{{ pathto('_static/twitter.js', 1) }}"></script>
-    <script type="text/javascript" src="{{ pathto('_static/google_analytics.js', 1) }}"></script>
+    <script type="text/javascript">
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-15957452-1', 'auto');
+      ga('send', 'pageview');
+    </script>
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '{{ url_root }}',
