add elements for Account Auto-Discovery on Hatena

--- a/_themes/timeless/layout.html
+++ b/_themes/timeless/layout.html
@@ -87,6 +87,19 @@
     <link rel="alternate" type="application/rss+xml" href="{{ pathto('rss.xml', 1) }}" />
     <link rel="shortcut icon" href="{{ pathto('_static/' + favicon, 1) }}" />
     {%- block extrahead -%} {% endblock -%}
+    <rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+             xmlns:dc="http://purl.org/dc/elements/1.1/"
+             xmlns:foaf="http://xmlns.com/foaf/0.1/">
+      <rdf:Description rdf:about="https://yosida95.com/{{ pagename }}{{ file_suffix }}">
+        <foaf:maker rdf:parseType="Resource">
+          <foaf:holdsAccount>
+            <foaf:OnlineAccount foaf:accountName="yosida95">
+              <foaf:accountServiceHomepage rdf:resource="http://www.hatena.ne.jp/" />
+            </foaf:OnlineAccount>
+          </foaf:holdsAccount>
+        </foaf:maker>
+      </rdf:Description>
+    </rdf:RDF>
   </head>
   <body>
     <div id="wrapper">
