--- a/_themes/timeless/layout.html
+++ b/_themes/timeless/layout.html
@@ -56,14 +56,14 @@
     <link rel="stylesheet" type="text/css" href="{{ pathto('_static/pygments.css', 1) }}" />
     {%- for cssfile in css_files %}
     <link rel="stylesheet" href="{{ pathto(cssfile, 1) }}" type="text/css" />
-    {%- endfor -%}
+    {%- endfor %}
 
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     {%- for scriptfile in script_files -%}
     {%- if "jquery" not in scriptfile.lower() %}
     <script type="text/javascript" src="{{ pathto(scriptfile, 1) }}"></script>
     {%- endif -%}
-    {%- endfor -%}
+    {%- endfor %}
     <script type="text/javascript" src="{{ pathto('_static/twitter.js', 1) }}"></script>
     <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -86,7 +86,7 @@
 
     <link rel="alternate" type="application/rss+xml" href="{{ pathto('rss.xml', 1) }}" />
     <link rel="shortcut icon" href="{{ pathto('_static/' + favicon, 1) }}" />
-    {%- block extrahead -%} {% endblock -%}
+    {%- block extrahead -%} {% endblock %}
     <rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
              xmlns:dc="http://purl.org/dc/elements/1.1/"
              xmlns:foaf="http://xmlns.com/foaf/0.1/">
@@ -118,7 +118,7 @@
       </div>
       <div id="page">
         <div id="content">
-          {% block body -%}{% endblock -%}
+          {%- block body %}{% endblock %}
           {%- if prev or next %}
           <ul class="related">
             {%- if prev %}
@@ -132,11 +132,11 @@
         </div>
         <div id="sidebar">
           <ul>
-            {% for sidebartemplate in sidebars -%}
+            {%- for sidebartemplate in sidebars %}
             <li>
               {%- include sidebartemplate %}
             </li>
-            {% endfor -%}
+            {%- endfor %}
           </ul>
         </div>
       </div>
