--- a/_themes/purity/author.html
+++ b/_themes/purity/author.html
@@ -1,7 +1,7 @@
 {#- vim:set filetype=htmljinja shiftwidth=2: #}
               <h5>yosida95</h5>
               <div id="author-bio">
-                <p style="text-align: center"><img src="{{ pathto('_static/img/icon_200x200.png', 1) }}" width="160"></p>
+                <p style="text-align: center"><img src="{{ pathto('_static/icon_200x200.png', 1) }}" width="160"></p>
                 <p><a href="{{ pathto("pages/about") }}">著者について / About yosida95</a></p>
                 <p>ここで述べる内容は私個人の見解に基づくものであり、私の雇用者や私が所属する団体とは一切の関係がありません。</p>
               </div>
